# hermes-agent-cn

./: .env.example  .gitignore  README.md  pyproject.toml
.hermes/: README.md  policies.example.json
.learning/: ARCHITECTURE_DEEP_DIVE.md
src/: __init__.py  agent_loop.py  cost_tracker.py  event_bus.py  llm_client.py  main.py  models.py  permissions.py
src/agent/: __init__.py  context_compressor.py  context_compressor_v2.py
src/execution/: executor.py  parallel_executor.py  scheduler_v2.py  state_machine.py
src/memory/: chroma_store.py  memory_manager.py  skill_distiller.py
src/observability/: recall_logger.py  tracer.py
src/planning/: __init__.py  strategic_planner.py  tactical_planner.py
src/reflection/: critic.py
src/runtime/: __init__.py  checkpoint_store.py  resume_manager.py
src/security/: policy_engine.py
src/tools/: __init__.py  base.py  registry.py
src/tools/builtin/: __init__.py  edit_file.py  grep_search.py  list_dir.py  read_file.py  shell.py  write_file.py
src/ui/: __init__.py  tui_app.py
verify/: data_phase6_recall_cases.json  step10_phase4.py  step11_phase4.py  step12_phase4.py  step13_phase4.py  step14_phase4.py  step15_phase4.py  step16_phase4.py  step17_phase5.py  step18_phase5.py  step19_phase5.py  step1_env.py  step20_phase5.py  step21_phase5.py  step22_phase5.py  step23_phase6.py  step24_phase6.py  step25_phase6.py  step26_phase7.py  step27_phase7.py  step28_phase7.py  step29_phase8.py  step2_api.py  step30_phase8.py  step31_phase8.py  step32_phase9.py  step33_phase9.py  step34_phase9.py  step3_planning.py  step4_integration.py  step5_phase2.py  step6_phase3.py  step7_phase3.py  step8_phase3.py  step9_phase3.py
verify/reports/: phase6_recall_eval_report.json  phase7_recall_weight_sweep.baseline.json  phase8_recall_usability_report.json
